# chrono-scraper

./: .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  ADMIN_API_COMPREHENSIVE_GUIDE.md  ADMIN_DOCUMENTATION.md  ADMIN_SYSTEM_FINAL_REPORT.md  ADMIN_TRAINING_CHECKLIST.md  ADMIN_TRAINING_PROGRAM.md  ADMIN_TRAINING_QUICK_REFERENCE.md  AGENTS.md  ALERT_SYSTEM_DOCUMENTATION.md  ARCHIVE_SOURCES_API.md  ARCHIVE_SOURCES_CONFIG.md  ARCHIVE_SOURCES_MIGRATION.md  ARCHIVE_SOURCES_MONITORING.md  ARCHIVE_SOURCE_IMPLEMENTATION.md  ARCHIVE_SOURCE_TEST_REPORT.md  CLAUDE.local.md  CLAUDE.md  COMMON_CRAWL_TEST_SUITE_SUMMARY.md  COMPREHENSIVE_E2E_TEST_REPORT.md  CONTRIBUTORS.txt  DATABASE_MIGRATION_PLAN.md  DATABASE_OPERATIONAL_EXCELLENCE_SUMMARY.md  DATA_SYNC_README.md  DEPLOYMENT_GUIDE.md  DUCKDB_SERVICE_DEMO.md  HETZNER_CX32_OPTIMIZATION_GUIDE.md  INTELLIGENT_EXTRACTION_OPTIMIZATION.md  LICENSE  MIGRATION_PLAN.md  MIGRATION_QUICK_REFERENCE.md  MOBILE_TESTING_REPORT.md  Makefile  Makefile.hetzner  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION.md  PHASE_1_IMPLEMENTATION_COMPLETE.md  (+53 more)
.devcontainer/: .zshrc  bashrc.override.sh  devcontainer.json  launch.json
.playwright-mcp/: page-81-content.markdown
.serena/: project.yml
analytics/: migration_strategy.md  partitioning_strategy.md  sample_queries.sql
backend/: .env.production.example  ADMIN_DEPLOYMENT_CHECKLIST.md  ADMIN_TEST_REPORT.md  ANALYTICS_API_IMPLEMENTATION.md  CDX_RECORD_ENHANCEMENT_SUMMARY.md  (+70 more)
fastapi/: Dockerfile  pyproject.toml
fastapi/app/: main.py  worker.py
(+958 files in other folders)
